force-app/main/default/objects/Visit_Report__c/fields/Goal_of_next_visit__c.field-meta.xml
<CustomField>
    <fullName>Goal_of_next_visit__c</fullName>
    <label>Goal of next visit</label>
    <type>TextArea</type>
</CustomField>