force-app/main/default/objects/Visit_Report__c/fields/Main_competitor__c.field-meta.xml
<CustomField>
    <fullName>Main_competitor__c</fullName>
    <label>Main competitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Competitor A</fullName>
            </value>
            <value>
                <fullName>Competitor B</fullName>
            </value>
            <value>
                <fullName>Competitor C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>