force-app/main/default/objects/Visit_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Date__c</columns>
    <columns>Main_competitor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>